@@ -1,12 +1,12 @@
 package it.unisannio.studenti.qualitag.service;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static org.mockito.Mockito.any;
@@ -28,16 +28,15 @@ import it.unisannio.studenti.qualitag.repository.UserRepository;
 import it.unisannio.studenti.qualitag.security.model.CustomUserDetails;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
+import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import org.apache.coyote.BadRequestException;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
@@ -73,7 +72,7 @@ public class TeamServiceTest {
   private TeamService teamService;
 
   private TeamCreateDto teamCreateDto;
-  private CompletedTeamCreateDto completedTeamCreateDto;
+  //  private CompletedTeamCreateDto completedTeamCreateDto;
   private Team team;
   private Project project;
   private User owner, user1, user2, user3;
@@ -92,10 +91,12 @@ public class TeamServiceTest {
         new ArrayList<>(Arrays.asList("user1Id", "user2Id")));
     team.setTeamId("teamId");
 
+    long creationDate = Instant.now().toEpochMilli();
+    long deadline = Instant.parse("2025-12-31T23:59:59Z").toEpochMilli();
     project = new Project("projectName", "projectDescription",
-        0L, 0L, "ownerId", new ArrayList<>());
+        creationDate, deadline, "ownerId", new ArrayList<>());
     project.setProjectId("projectId");
-    project.setUserIds(Arrays.asList("ownerId", "user1Id", "user2Id"));
+    project.setUserIds(Arrays.asList("ownerId", "user1Id", "user2Id", "user3Id"));
     owner = new User("username", "user@example.com",
         "hashedPassword123", "John", "Doe");
     owner.setUserId("ownerId");
@@ -104,20 +105,20 @@ public class TeamServiceTest {
     user1 = new User("user1", "user1@example.com",
         "password", "Jane", "Doe");
     user1.setUserId("user1Id");
-    user1.setTeamIds(new ArrayList<>(Arrays.asList("teamId")));
+    user1.setTeamIds(new ArrayList<>(List.of("teamId")));
     user2 = new User("user2", "user2@example.com",
         "password", "Alice", "Smith");
     user2.setUserId("user2Id");
-    user2.setTeamIds(new ArrayList<>(Arrays.asList("teamId")));
+    user2.setTeamIds(new ArrayList<>(List.of("teamId")));
     user3 = new User("user3", "user3@example.com", "password",
         "Bob", "Johnson");
     user3.setUserId("user3Id");
     user3.setTeamIds(new ArrayList<>());
 
     //tags and artifacts
-    tag1 = new Tag("tag1Id", "tag1Name", "projectId");
+    tag1 = new Tag("6744ba6c60e0564864250e89", "tag1Name", "projectId");
     tag1.setCreatedBy(user1.getUserId());
-    tag2 = new Tag("tag2Id", "tag2Name", "projectId");
+    tag2 = new Tag("6755b79afc22f97c06a34275", "tag2Name", "projectId");
     tag2.setCreatedBy(user2.getUserId());
 
     artifact = new Artifact("artifactName",
@@ -126,16 +127,16 @@ public class TeamServiceTest {
     artifact.setTags(new ArrayList<>(Arrays.asList("tagId1", "tagId2")));
 
     //add artifact to team
-    team.setArtifactIds(Arrays.asList("artifactId"));
+    team.setArtifactIds(List.of("artifactId"));
 
     //Initialize DTO
     teamCreateDto = new TeamCreateDto("teamName", "teamDescription",
         "projectId", new ArrayList<>(Arrays.asList("user1@example.com",
         "user2@example.com")));
-    completedTeamCreateDto = new CompletedTeamCreateDto("teamName",
-        "projectId", 123456789L, "teamDescription",
-        Arrays.asList("user1", "user2")
-    );
+//    completedTeamCreateDto = new CompletedTeamCreateDto("teamName",
+//        "projectId", 123456789L, "teamDescription",
+//        Arrays.asList("user1", "user2")
+//    );
 
     // Mock SecurityContextHolder to provide an authenticated user
     Authentication authentication = mock(Authentication.class);
@@ -153,21 +154,23 @@ public class TeamServiceTest {
   @Test
   void testAddTeam_success() {
     // Arrange
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(userRepository.findByUserId("ownerId")).thenReturn(owner);
+    when(projectRepository.findProjectByProjectId(project.getProjectId()))
+        .thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
     when(teamRepository.save(any(Team.class))).thenReturn(team);
-    when(userRepository.findByEmail("user1@example.com")).thenReturn(user1);
-    when(userRepository.findByUserId("user1Id")).thenReturn(user1);
-    when(userRepository.findByEmail("user2@example.com")).thenReturn(user2);
-    when(userRepository.findByUserId("user2Id")).thenReturn(user2);
+    when(userRepository.findByEmail(user1.getEmail())).thenReturn(user1);
+    when(userRepository.findByUserId(user1.getUserId())).thenReturn(user1);
+    when(userRepository.findByEmail(user2.getEmail())).thenReturn(user2);
+    when(userRepository.findByUserId(user2.getUserId())).thenReturn(user2);
 
     // Act
     ResponseEntity<?> response = teamService.addTeam(teamCreateDto);
 
     // Assert
     assertEquals(HttpStatus.CREATED, response.getStatusCode());
-    assertEquals("Team added successfully",
-        ((Map<String, String>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Team added successfully.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
@@ -184,9 +187,9 @@ public class TeamServiceTest {
 
     // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("Invalid team data", ((Map<String, String>)
-        response.getBody()).get("msg"));
-
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Invalid team data.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
@@ -197,15 +200,17 @@ public class TeamServiceTest {
   @Test
   void testAddTeam_ProjectNotFound() throws TeamValidationException {
     // Arrange
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(null);
+    when(projectRepository.findProjectByProjectId(project.getProjectId()))
+        .thenReturn(null);
 
     // Act
     ResponseEntity<?> response = teamService.addTeam(teamCreateDto);
 
     // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("Project not found", ((Map<String, String>) response.getBody())
-        .get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Project not found.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
@@ -216,8 +221,9 @@ public class TeamServiceTest {
   @Test
   void testAddTeam_UserNotProjectOwner() throws TeamValidationException {
     // Arrange
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(userRepository.findByUserId("ownerId")).thenReturn(owner);
+    when(projectRepository.findProjectByProjectId(project.getProjectId()))
+        .thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
 
     project.setOwnerId("NotOwnerId");
 
@@ -226,8 +232,9 @@ public class TeamServiceTest {
 
     // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("Only the project owner can create a team",
-        ((Map<String, String>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Only the project owner can create a team.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
@@ -242,16 +249,18 @@ public class TeamServiceTest {
         "projectId", new ArrayList<>(Arrays.asList("user2@example.com",
         "user3@example.com")));
 
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(userRepository.findByUserId("ownerId")).thenReturn(owner);
+    when(projectRepository.findProjectByProjectId(project.getProjectId()))
+        .thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
 
     // Act
     ResponseEntity<?> response = teamService.addTeam(teamCreateDto);
 
     // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("Team name is too short",
-        ((Map<String, String>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Team name is too short.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
@@ -266,16 +275,18 @@ public class TeamServiceTest {
         "teamDescription", "projectId",
         new ArrayList<>(Arrays.asList("user2@example.com", "user3@example.com")));
 
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(userRepository.findByUserId("ownerId")).thenReturn(owner);
+    when(projectRepository.findProjectByProjectId(project.getProjectId()))
+        .thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
 
     // Act
     ResponseEntity<?> response = teamService.addTeam(teamCreateDto);
 
     // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("Team name is too long",
-        ((Map<String, String>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Team name is too long.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
@@ -291,17 +302,17 @@ public class TeamServiceTest {
             "user2@example.com")));
 
     // Arrange
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(userRepository.findByUserId("ownerId")).thenReturn(owner);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
 
     // Act
     ResponseEntity<?> response = teamService.addTeam(teamCreateDto);
 
     // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("Owner email must not be in the list",
-        ((Map<String, String>) response.getBody()).get("msg"));
-
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Owner email must not be in the list.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
@@ -313,21 +324,22 @@ public class TeamServiceTest {
   void testAddTeam_NotEnoughUsers() throws TeamValidationException {
     // Arrange
     teamCreateDto = new TeamCreateDto("TeamName", "teamDescription",
-        "projectId", new ArrayList<>(Arrays.asList("user2@example.com")));
+        "projectId", new ArrayList<>(List.of(user2.getEmail())));
 
     // Arrange
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(userRepository.findByUserId("ownerId")).thenReturn(owner);
+    when(projectRepository.findProjectByProjectId(project.getProjectId()))
+        .thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
 
     // Act
     ResponseEntity<?> response = teamService.addTeam(teamCreateDto);
 
     // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("A team must have at least " + TeamConstants.MIN_TEAM_USERS
-            + " users",
-        ((Map<String, String>) response.getBody()).get("msg"));
-
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "A team must have at least " + TeamConstants.MIN_TEAM_USERS
+        + " users.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
@@ -381,30 +393,30 @@ public class TeamServiceTest {
         , "user7@example.com", "user8@example.com", "user9@example.com", "user10@example.com",
         "user11@example.com")));
 
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(userRepository.findByUserId("ownerId")).thenReturn(owner);
-    when(userRepository.findByEmail("user1@example.com")).thenReturn(user1);
-    when(userRepository.findByEmail("user2@example.com")).thenReturn(user2);
-    when(userRepository.findByEmail("user3@example.com")).thenReturn(user3);
-    when(userRepository.findByEmail("user4@example.com")).thenReturn(user4);
-    when(userRepository.findByEmail("user5@example.com")).thenReturn(user5);
-    when(userRepository.findByEmail("user6@example.com")).thenReturn(user6);
-    when(userRepository.findByEmail("user7@example.com")).thenReturn(user7);
-    when(userRepository.findByEmail("user8@example.com")).thenReturn(user8);
-    when(userRepository.findByEmail("user9@example.com")).thenReturn(user9);
-    when(userRepository.findByEmail("user10@example.com")).thenReturn(user10);
-    when(userRepository.findByEmail("user11@example.com")).thenReturn(user11);
-    when(userRepository.findByUserId("user1Id")).thenReturn(user1);
-    when(userRepository.findByUserId("user2Id")).thenReturn(user2);
-    when(userRepository.findByUserId("user3Id")).thenReturn(user3);
-    when(userRepository.findByUserId("user4Id")).thenReturn(user4);
-    when(userRepository.findByUserId("user5Id")).thenReturn(user5);
-    when(userRepository.findByUserId("user6Id")).thenReturn(user6);
-    when(userRepository.findByUserId("user7Id")).thenReturn(user7);
-    when(userRepository.findByUserId("user8Id")).thenReturn(user8);
-    when(userRepository.findByUserId("user9Id")).thenReturn(user9);
-    when(userRepository.findByUserId("user10Id")).thenReturn(user10);
-    when(userRepository.findByUserId("user11Id")).thenReturn(user11);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
+    when(userRepository.findByEmail(user1.getEmail())).thenReturn(user1);
+    when(userRepository.findByEmail(user2.getEmail())).thenReturn(user2);
+    when(userRepository.findByEmail(user3.getEmail())).thenReturn(user3);
+    when(userRepository.findByEmail(user4.getEmail())).thenReturn(user4);
+    when(userRepository.findByEmail(user5.getEmail())).thenReturn(user5);
+    when(userRepository.findByEmail(user6.getEmail())).thenReturn(user6);
+    when(userRepository.findByEmail(user7.getEmail())).thenReturn(user7);
+    when(userRepository.findByEmail(user8.getEmail())).thenReturn(user8);
+    when(userRepository.findByEmail(user9.getEmail())).thenReturn(user9);
+    when(userRepository.findByEmail(user10.getEmail())).thenReturn(user10);
+    when(userRepository.findByEmail(user11.getEmail())).thenReturn(user11);
+    when(userRepository.findByUserId(user1.getUserId())).thenReturn(user1);
+    when(userRepository.findByUserId(user2.getUserId())).thenReturn(user2);
+    when(userRepository.findByUserId(user3.getUserId())).thenReturn(user3);
+    when(userRepository.findByUserId(user4.getUserId())).thenReturn(user4);
+    when(userRepository.findByUserId(user5.getUserId())).thenReturn(user5);
+    when(userRepository.findByUserId(user6.getUserId())).thenReturn(user6);
+    when(userRepository.findByUserId(user7.getUserId())).thenReturn(user7);
+    when(userRepository.findByUserId(user8.getUserId())).thenReturn(user8);
+    when(userRepository.findByUserId(user9.getUserId())).thenReturn(user9);
+    when(userRepository.findByUserId(user10.getUserId())).thenReturn(user10);
+    when(userRepository.findByUserId(user11.getUserId())).thenReturn(user11);
 
     project.setUserIds(Arrays.asList("ownerId", "user1Id", "user2Id", "user3Id", "user4Id",
         "user5Id", "user6Id", "user7Id", "user8Id", "user9Id", "user10Id", "user11Id"));
@@ -414,9 +426,10 @@ public class TeamServiceTest {
 
     // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("A team cannot have more than " +
-            TeamConstants.MAX_TEAM_USERS + " users",
-        ((Map<String, String>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "A team cannot have more than " +
+        TeamConstants.MAX_TEAM_USERS + " users.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
@@ -430,17 +443,17 @@ public class TeamServiceTest {
     teamCreateDto = new TeamCreateDto("TeamName", "teamDescription",
         "projectId", new ArrayList<>(Arrays.asList("", "user2@example.come")));
 
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(userRepository.findByUserId("ownerId")).thenReturn(owner);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
 
     // Act
     ResponseEntity<?> response = teamService.addTeam(teamCreateDto);
 
     // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("There is an empty email in the list. Remove it.",
-        ((Map<String, String>) response.getBody()).get("msg"));
-
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "There is an empty email in the list. Remove it.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
@@ -452,16 +465,17 @@ public class TeamServiceTest {
     teamCreateDto = new TeamCreateDto("TeamName", "teamDescription",
         "projectId", new ArrayList<>(Arrays.asList(null, "user2@example.come")));
 
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(userRepository.findByUserId("ownerId")).thenReturn(owner);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
 
     // Act
     ResponseEntity<?> response = teamService.addTeam(teamCreateDto);
 
     // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("There is an empty email in the list. Remove it.",
-        ((Map<String, String>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "There is an empty email in the list. Remove it.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
@@ -472,17 +486,18 @@ public class TeamServiceTest {
   @Test
   void addTeam_EmailDoesNotExist() throws TeamValidationException {
     // Arrange
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(userRepository.findByUserId("ownerId")).thenReturn(owner);
-    when(userRepository.findByEmail("user1@example.com")).thenReturn(null);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
+    when(userRepository.findByEmail(user1.getEmail())).thenReturn(null);
 
     // Act
     ResponseEntity<?> response = teamService.addTeam(teamCreateDto);
 
     // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("User with email user1@example.com does not exist",
-        ((Map<String, String>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "User with email " + user1.getEmail() + " does not exist.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
@@ -504,31 +519,31 @@ public class TeamServiceTest {
         "projectId", new ArrayList<>(Arrays.asList("user1@example.com",
         "user2@example.com")));
 
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(userRepository.findByUserId("ownerId")).thenReturn(owner);
-    when(userRepository.findByEmail("user1@example.com")).thenReturn(user1);
-    when(userRepository.findByUserId("user1Id")).thenReturn(user1);
-    when(userRepository.findByEmail("user2@example.com")).thenReturn(user2);
-    when(userRepository.findByUserId("user2Id")).thenReturn(user2);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
+    when(userRepository.findByEmail(user1.getEmail())).thenReturn(user1);
+    when(userRepository.findByUserId(user1.getUserId())).thenReturn(user1);
+    when(userRepository.findByEmail(user2.getEmail())).thenReturn(user2);
+    when(userRepository.findByUserId(user1.getUserId())).thenReturn(user2);
 
     // Act
     ResponseEntity<?> response = teamService.addTeam(teamCreateDto);
 
     // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("Team description is too long. Max is "
-            + TeamConstants.MAX_TEAM_DESCRIPTION_LENGTH + " "
-            + "characters including whitespaces.",
-        ((Map<String, String>) response.getBody()).get("msg"));
-
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Team description is too long. Max is "
+        + TeamConstants.MAX_TEAM_DESCRIPTION_LENGTH +
+        " characters including whitespaces.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
    * Tests an execution of the addTeam method where the team description is empty
    *
-   * @throws NoSuchMethodException  if the validateTeam method is not found
+   * @throws NoSuchMethodException     if the validateTeam method is not found
    * @throws InvocationTargetException if the validateTeam method cannot be invoked
-   * @throws IllegalAccessException  if the validateTeam method cannot be accessed
+   * @throws IllegalAccessException    if the validateTeam method cannot be accessed
    */
   @Test
   void testAddTeam_TeamDescriptionEmpty()
@@ -541,12 +556,12 @@ public class TeamServiceTest {
     //Arrange: Set up mock objects and spy on the service class
     TeamService teamServiceSpy = Mockito.spy(teamService);
 
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(userRepository.findByUserId("ownerId")).thenReturn(owner);
-    when(userRepository.findByEmail("user1@example.com")).thenReturn(user1);
-    when(userRepository.findByUserId("user1Id")).thenReturn(user1);
-    when(userRepository.findByEmail("user2@example.com")).thenReturn(user2);
-    when(userRepository.findByUserId("user2Id")).thenReturn(user2);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
+    when(userRepository.findByEmail(user1.getEmail())).thenReturn(user1);
+    when(userRepository.findByUserId(user1.getUserId())).thenReturn(user1);
+    when(userRepository.findByEmail(user2.getEmail())).thenReturn(user2);
+    when(userRepository.findByUserId(user2.getUserId())).thenReturn(user2);
 
     // Act
     ResponseEntity<?> response = teamService.addTeam(teamCreateDto);
@@ -564,20 +579,6 @@ public class TeamServiceTest {
     assertEquals("Hi, we are team teamName!", result.teamDescription());
   }
 
-  //TODO: Add test for addTeam method where the team is null
-
-  /**
-   * Tests an execution of the addTeam method where the team is null
-   *
-   * @throws TeamValidationException if the team is null
-   */
-  @Test
-  void testAddTeam_NullTeam() throws TeamValidationException {
-  }
-
-  //TODO: Add test for addTeam method where user is null
-  //TODO: Add test for addTeam method where user is empty
-
   /**
    * Tests an execution of the addTeam method where the user does not exist in the database
    *
@@ -586,21 +587,22 @@ public class TeamServiceTest {
   @Test
   void testAddTeam_UserIdDoesNotExist() throws TeamValidationException {
     // Arrange
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(userRepository.findByUserId("ownerId")).thenReturn(owner);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
     when(teamRepository.save(any(Team.class))).thenReturn(team);
-    when(userRepository.findByEmail("user1@example.com")).thenReturn(user1);
-    when(userRepository.findByUserId("user1Id")).thenReturn(null);
-    when(userRepository.findByEmail("user2@example.com")).thenReturn(user2);
-    when(userRepository.findByEmail("user2Id")).thenReturn(user2);
+    when(userRepository.findByEmail(user1.getEmail())).thenReturn(user1);
+    when(userRepository.findByUserId(user1.getUserId())).thenReturn(null);
+    when(userRepository.findByEmail(user2.getEmail())).thenReturn(user2);
+    when(userRepository.findByEmail(user2.getUserId())).thenReturn(user2);
 
     // Act
     ResponseEntity<?> response = teamService.addTeam(teamCreateDto);
 
     // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("User with ID user1Id does not exist",
-        ((Map<String, String>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "User with ID " + user1.getUserId() + " does not exist.");
+    assertEquals(responseBody, response.getBody());
   }
 
   //TODO: Add test for when an user is the team is already in an another team
@@ -611,13 +613,13 @@ public class TeamServiceTest {
   @Test
   void testAddTeam_UserIsNotPartOfProject() {
     // Arrange
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(userRepository.findByUserId("ownerId")).thenReturn(owner);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
     when(teamRepository.save(any(Team.class))).thenReturn(team);
-    when(userRepository.findByEmail("user1@example.com")).thenReturn(user1);
-    when(userRepository.findByUserId("user1Id")).thenReturn(user1);
-    when(userRepository.findByEmail("user2@example.com")).thenReturn(user2);
-    when(userRepository.findByEmail("user2Id")).thenReturn(user2);
+    when(userRepository.findByEmail(user1.getEmail())).thenReturn(user1);
+    when(userRepository.findByUserId(user1.getUserId())).thenReturn(user1);
+    when(userRepository.findByEmail(user2.getEmail())).thenReturn(user2);
+    when(userRepository.findByEmail(user2.getUserId())).thenReturn(user2);
 
     project.setUserIds(Arrays.asList("ownerId", "user2Id"));
 
@@ -626,8 +628,9 @@ public class TeamServiceTest {
 
     // Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("User with ID user1Id is not part of the project",
-        ((Map<String, String>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "User with ID " + user1.getUserId() + " is not part of the project.");
+    assertEquals(responseBody, response.getBody());
   }
 
 
@@ -651,10 +654,10 @@ public class TeamServiceTest {
         new ArrayList<>(Arrays.asList("user1@example.com", "user2@example.com")));
 
     // Mock necessary repository calls
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(userRepository.findByUserId("ownerId")).thenReturn(owner);
-    when(userRepository.findByEmail("user1@example.com")).thenReturn(user1);
-    when(userRepository.findByEmail("user2@example.com")).thenReturn(user2);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
+    when(userRepository.findByEmail(user1.getEmail())).thenReturn(user1);
+    when(userRepository.findByEmail(user2.getEmail())).thenReturn(user2);
 
     // Prepare the expected CompletedTeamCreateDto
     CompletedTeamCreateDto expectedDto = new CompletedTeamCreateDto("teamName",
@@ -680,14 +683,9 @@ public class TeamServiceTest {
 
   /**
    * Tests the method addTeamToUsers with reflection, in the case where the team i null
-   *
-   * @throws NoSuchMethodException     if the addTeamToUsers method is not found
-   * @throws InvocationTargetException if the addTeamToUsers method cannot be invoked
-   * @throws IllegalAccessException    if the addTeamToUsers method cannot be accessed
    */
   @Test
-  void testAddTeamToUsers_TeamNull() throws NoSuchMethodException,
-      InvocationTargetException, IllegalAccessException {
+  void testAddTeamToUsers_TeamNull() {
     //Arrange
     TeamService teamServiceSpy = Mockito.spy(teamService);
     team = null;
@@ -704,18 +702,14 @@ public class TeamServiceTest {
     assertNotNull(cause, "Expected an exception cause but found null.");
     assertInstanceOf(TeamValidationException.class, cause,
         "Expected a TeamValidationException.");
-    assertEquals("Team cannot be null", cause.getMessage());
+    assertEquals("Team cannot be null.", cause.getMessage());
   }
 
   /**
    * Tests the method addTeamToUsers with reflection, in the case where the team has a null user
-   *
-   * @throws NoSuchMethodException  if the addTeamToUsers method is not found
-   * @throws IllegalAccessException if the addTeamToUsers method cannot be accessed
    */
   @Test
-  void testAddTeamToUsers_UserIdNull()
-      throws NoSuchMethodException, IllegalAccessException {
+  void testAddTeamToUsers_UserIdNull() {
     // Arrange
     TeamService teamServiceSpy = Mockito.spy(teamService);
 
@@ -734,18 +728,14 @@ public class TeamServiceTest {
     assertNotNull(cause, "Expected an exception cause but found null.");
     assertInstanceOf(TeamValidationException.class, cause,
         "Expected a TeamValidationException.");
-    assertEquals("User ID is null or empty", cause.getMessage());
+    assertEquals("User ID is null or empty.", cause.getMessage());
   }
 
   /**
    * Tests the method addTeamToUsers with reflection, in the case where the team has an empty user
-   *
-   * @throws NoSuchMethodException  if the addTeamToUsers method is not found
-   * @throws IllegalAccessException if the addTeamToUsers method cannot be accessed
    */
   @Test
-  void testAddTeamToUsers_UserIdEmpty()
-      throws NoSuchMethodException, IllegalAccessException {
+  void testAddTeamToUsers_UserIdEmpty() {
     // Arrange
     TeamService teamServiceSpy = Mockito.spy(teamService);
 
@@ -764,24 +754,21 @@ public class TeamServiceTest {
     assertNotNull(cause, "Expected an exception cause but found null.");
     assertInstanceOf(TeamValidationException.class, cause,
         "Expected a TeamValidationException.");
-    assertEquals("User ID is null or empty", cause.getMessage());
+    assertEquals("User ID is null or empty.", cause.getMessage());
   }
 
 
   /**
    * Tests the method addTeamToUsers with reflection, in the case where the user does not exist
-   *
-   * @throws NoSuchMethodException  if the addTeamToUsers method is not found
-   * @throws IllegalAccessException if the addTeamToUsers method cannot be accessed
    */
   @Test
-  void testAddTeamToUsers_UserDoesNotExist() throws NoSuchMethodException, IllegalAccessException {
+  void testAddTeamToUsers_UserDoesNotExist() {
     // Arrange
     TeamService teamServiceSpy = Mockito.spy(teamService);
 
-    team.setUserIds(Arrays.asList("nonexistentUser", "user1Id"));
+    team.setUserIds(Arrays.asList("nonexistentUser", user1.getUserId()));
     when(userRepository.findByUserId("nonexistentUser")).thenReturn(null);
-    when(userRepository.findByUserId("user1")).thenReturn(user1);
+    when(userRepository.findByUserId(user1.getUserId())).thenReturn(user1);
 
     // Act & Assert
     InvocationTargetException exception = assertThrows(InvocationTargetException.class, () -> {
@@ -796,24 +783,21 @@ public class TeamServiceTest {
     assertNotNull(cause, "Expected an exception cause but found null.");
     assertInstanceOf(TeamValidationException.class, cause,
         "Expected a TeamValidationException.");
-    assertEquals("User with ID nonexistentUser does not exist", cause.getMessage());
+    assertEquals("User with ID nonexistentUser does not exist.", cause.getMessage());
   }
 
   /**
    * Tests the method addTeamToUsers with reflection, in the case where the user is not part of the
    * project
-   *
-   * @throws NoSuchMethodException  if the addTeamToUsers method is not found
-   * @throws IllegalAccessException if the addTeamToUsers method cannot be accessed
    */
   @Test
-  void testAddTeamToUsers_UserNotInProject() throws NoSuchMethodException, IllegalAccessException {
+  void testAddTeamToUsers_UserNotInProject() {
     //Arrange
     TeamService teamServiceSpy = Mockito.spy(teamService);
 
-    team.setProjectId("projectId");
-    when(userRepository.findByUserId("user1Id")).thenReturn(user1);
-    when(userRepository.findByUserId("user2Id")).thenReturn(user2);
+    team.setProjectId(project.getProjectId());
+    when(userRepository.findByUserId(user1.getUserId())).thenReturn(user1);
+    when(userRepository.findByUserId(user2.getUserId())).thenReturn(user2);
 
     project.setUserIds(Arrays.asList("user1Id", "user3Id")); // User not in project
     when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
@@ -831,7 +815,7 @@ public class TeamServiceTest {
     assertNotNull(cause, "Expected an exception cause but found null.");
     assertInstanceOf(TeamValidationException.class, cause,
         "Expected a TeamValidationException.");
-    assertEquals("User with ID user2Id is not part of the project",
+    assertEquals("User with ID " + user2.getUserId() + " is not part of the project.",
         cause.getMessage());
   }
 
@@ -841,16 +825,17 @@ public class TeamServiceTest {
   @Test
   void testGetTeamsByProject() {
     //Arrange
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(teamRepository.existsByProjectId("projectId")).thenReturn(true);
-    when(teamRepository.findTeamsByProjectId("projectId")).thenReturn(Arrays.asList(team));
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(teamRepository.existsByProjectId(project.getProjectId())).thenReturn(true);
+    when(teamRepository.findTeamsByProjectId(project.getProjectId()))
+        .thenReturn(List.of(team));
 
     //Act
-    ResponseEntity<?> response = teamService.getTeamsByProject("projectId");
+    ResponseEntity<?> response = teamService.getTeamsByProject(project.getProjectId());
 
     //Assert
     assertEquals(HttpStatus.OK, response.getStatusCode());
-    assertEquals(Arrays.asList(team), response.getBody());
+    assertEquals(List.of(team), response.getBody());
   }
 
   /**
@@ -863,7 +848,7 @@ public class TeamServiceTest {
 
     //Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("Project ID is null or empty", response.getBody());
+    assertEquals("Project ID is null or empty.", response.getBody());
   }
 
   /**
@@ -876,7 +861,7 @@ public class TeamServiceTest {
 
     //Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("Project ID is null or empty", response.getBody());
+    assertEquals("Project ID is null or empty.", response.getBody());
   }
 
   /**
@@ -885,15 +870,15 @@ public class TeamServiceTest {
   @Test
   void testGetTeamsByProject_NoTeamsFound() {
     //Arrange
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
-    when(teamRepository.existsByProjectId("projectId")).thenReturn(false);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(teamRepository.existsByProjectId(project.getProjectId())).thenReturn(false);
 
     //Act
     ResponseEntity<?> response = teamService.getTeamsByProject("projectId");
 
     //Assert
     assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
-    assertEquals("No teams found for project ID projectId", response.getBody());
+    assertEquals("No teams found for project ID projectId.", response.getBody());
   }
 
   /**
@@ -902,16 +887,16 @@ public class TeamServiceTest {
   @Test
   void testGetTeamsByUser() {
     //Arrange
-    when(userRepository.findByUserId("userId")).thenReturn(user1);
-    when(teamRepository.existsByUserIdsContaining("userId")).thenReturn(true);
-    when(teamRepository.findByUserIdsContaining("userId")).thenReturn(Arrays.asList(team));
+    when(userRepository.findByUserId(user1.getUserId())).thenReturn(user1);
+    when(teamRepository.existsByUserIdsContaining(user1.getUserId())).thenReturn(true);
+    when(teamRepository.findByUserIdsContaining(user1.getUserId())).thenReturn(List.of(team));
 
     //Act
-    ResponseEntity<?> response = teamService.getTeamsByUser("userId");
+    ResponseEntity<?> response = teamService.getTeamsByUser(user1.getUserId());
 
     //Assert
     assertEquals(HttpStatus.OK, response.getStatusCode());
-    assertEquals(Arrays.asList(team), response.getBody());
+    assertEquals(List.of(team), response.getBody());
   }
 
   /**
@@ -924,7 +909,7 @@ public class TeamServiceTest {
 
     //Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("User ID is null or empty", response.getBody());
+    assertEquals("User ID is null or empty.", response.getBody());
   }
 
   /**
@@ -937,7 +922,7 @@ public class TeamServiceTest {
 
     //Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("User ID is null or empty", response.getBody());
+    assertEquals("User ID is null or empty.", response.getBody());
   }
 
   /**
@@ -946,15 +931,16 @@ public class TeamServiceTest {
   @Test
   void testGetTeamsByUser_NoTeamsFound() {
     //Arrange
-    when(userRepository.findByUserId("userId")).thenReturn(user1);
-    when(teamRepository.existsByUserIdsContaining("userId")).thenReturn(false);
+    when(userRepository.findByUserId(user1.getUserId())).thenReturn(user1);
+    when(teamRepository.existsByUserIdsContaining(user1.getUserId())).thenReturn(false);
 
     //Act
-    ResponseEntity<?> response = teamService.getTeamsByUser("userId");
+    ResponseEntity<?> response = teamService.getTeamsByUser(user1.getUserId());
 
     //Assert
     assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
-    assertEquals("No teams found for user ID userId", response.getBody());
+    assertEquals("No teams found for user ID " + user1.getUserId() + "."
+        , response.getBody());
   }
 
   /**
@@ -963,26 +949,26 @@ public class TeamServiceTest {
   @Test
   void testDeleteTeam() {
     //Arrange
-    when(teamRepository.findById("teamId")).thenReturn(Optional.ofNullable(team));
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
+    when(teamRepository.findById(team.getTeamId())).thenReturn(Optional.ofNullable(team));
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
     when(projectRepository.save(project)).thenReturn(project);
 
-    when(userRepository.findById("user2Id")).thenReturn(Optional.ofNullable(user2));
+    when(userRepository.findById(user2.getUserId())).thenReturn(Optional.ofNullable(user2));
     when(userRepository.save(user2)).thenReturn(user2);
-    when(userRepository.findById("user1Id")).thenReturn(Optional.ofNullable(user1));
+    when(userRepository.findById(user1.getUserId())).thenReturn(Optional.ofNullable(user1));
     when(userRepository.save(user1)).thenReturn(user1);
-    when(teamRepository.existsById("teamId")).thenReturn(false);
+    when(teamRepository.existsById(team.getTeamId())).thenReturn(false);
 
-    when(artifactService.deleteArtifact("artifactId")).
+    when(artifactService.deleteArtifact(artifact.getArtifactId())).
         thenReturn(ResponseEntity.ok().build());
 
     //Act
-    ResponseEntity<?> response = teamService.deleteTeam("teamId");
+    ResponseEntity<?> response = teamService.deleteTeam(team.getTeamId());
 
-    Map<String, String> responseBody = new HashMap<>();
-    responseBody.put("msg", "Team deleted successfully.");
     //Assert
     assertEquals(HttpStatus.OK, response.getStatusCode());
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Team deleted successfully.");
     assertEquals(responseBody, response.getBody());
   }
 
@@ -996,8 +982,9 @@ public class TeamServiceTest {
 
     //Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("Team ID is null or empty",
-        ((Map<String, String>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Team ID is null or empty.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
@@ -1010,8 +997,9 @@ public class TeamServiceTest {
 
     //Assert
     assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    assertEquals("Team ID is null or empty",
-        ((Map<String, String>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Team ID is null or empty.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
@@ -1020,15 +1008,16 @@ public class TeamServiceTest {
   @Test
   void testDeleteTeam_TeamNotFound() {
     //Arrange
-    when(teamRepository.findById("teamId")).thenReturn(Optional.empty());
+    when(teamRepository.findById(team.getTeamId())).thenReturn(Optional.empty());
 
     //Act
-    ResponseEntity<?> response = teamService.deleteTeam("teamId");
+    ResponseEntity<?> response = teamService.deleteTeam(team.getTeamId());
 
     //Assert
     assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
-    assertEquals("Team not found",
-        ((Map<String, String>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Team not found.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
@@ -1037,16 +1026,17 @@ public class TeamServiceTest {
   @Test
   void testDeleteTeam_ProjectNotFound() {
     //Arrange
-    when(teamRepository.findById("teamId")).thenReturn(Optional.ofNullable(team));
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(null);
+    when(teamRepository.findById(team.getTeamId())).thenReturn(Optional.ofNullable(team));
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(null);
 
     //Act
     ResponseEntity<?> response = teamService.deleteTeam("teamId");
 
     //Assert
     assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
-    assertEquals("Project not found",
-        ((Map<String, String>) response.getBody()).get("msg"));
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Project not found.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
@@ -1055,21 +1045,22 @@ public class TeamServiceTest {
   @Test
   void testDeleteTeam_UserNotFound() {
     //Arrange
-    when(teamRepository.findById("teamId")).thenReturn(Optional.ofNullable(team));
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
+    when(teamRepository.findById(team.getTeamId())).thenReturn(Optional.ofNullable(team));
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
     when(projectRepository.save(project)).thenReturn(project);
 
-    when(userRepository.findById("user1Id")).thenReturn(Optional.ofNullable(user1));
+    when(userRepository.findById(user1.getUserId())).thenReturn(Optional.ofNullable(user1));
     when(userRepository.save(user1)).thenReturn(user1);
-    when(userRepository.findById("user2Id")).thenReturn(Optional.empty());
+    when(userRepository.findById(user2.getUserId())).thenReturn(Optional.empty());
 
     //Act
-    ResponseEntity<?> response = teamService.deleteTeam("teamId");
+    ResponseEntity<?> response = teamService.deleteTeam(team.getTeamId());
 
     //Assert
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "User with ID " + user2.getUserId() + " not found.");
     assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
-    assertEquals("User with ID user2Id not found",
-        ((Map<String, String>) response.getBody()).get("msg"));
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
@@ -1078,25 +1069,25 @@ public class TeamServiceTest {
   @Test
   void testDeleteTeam_TeamNotDeleted() {
     //Arrange
-    when(teamRepository.findById("teamId")).thenReturn(Optional.ofNullable(team));
-    when(projectRepository.findProjectByProjectId("projectId")).thenReturn(project);
+    when(teamRepository.findById(team.getTeamId())).thenReturn(Optional.ofNullable(team));
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
     when(projectRepository.save(project)).thenReturn(project);
 
-    when(userRepository.findById("user2Id")).thenReturn(Optional.ofNullable(user2));
+    when(userRepository.findById(user2.getUserId())).thenReturn(Optional.ofNullable(user2));
     when(userRepository.save(user2)).thenReturn(user2);
-    when(userRepository.findById("user1Id")).thenReturn(Optional.ofNullable(user1));
+    when(userRepository.findById(user1.getUserId())).thenReturn(Optional.ofNullable(user1));
     when(userRepository.save(user1)).thenReturn(user1);
-    when(teamRepository.existsById("teamId")).thenReturn(true);
+    when(teamRepository.existsById(team.getTeamId())).thenReturn(true);
 
-    when(artifactService.deleteArtifact("artifactId")).
+    when(artifactService.deleteArtifact(artifact.getArtifactId())).
         thenReturn(ResponseEntity.ok().build());
 
     //Act
-    ResponseEntity<?> response = teamService.deleteTeam("teamId");
-    Map<String, String> responseBody = new HashMap<>();
-    responseBody.put("msg", "Team not deleted.");
+    ResponseEntity<?> response = teamService.deleteTeam(team.getTeamId());
 
     //Assert
+    Map<String, String> responseBody = new HashMap<>();
+    responseBody.put("msg", "Team not deleted.");
     assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
     assertEquals(responseBody, response.getBody());
   }
@@ -1107,24 +1098,26 @@ public class TeamServiceTest {
   @Test
   void testGetTeamIrr_Success() {
     //Arrange
-    when(teamRepository.findTeamByTeamId("teamId")).thenReturn(team);
-    when(artifactRepository.findArtifactByArtifactId("artifactId")).thenReturn(artifact);
-    when(tagRepository.findTagByTagId("tag1Id")).thenReturn(tag1);
-    when(tagRepository.findTagByTagId("tag2Id")).thenReturn(tag2);
+    when(teamRepository.findTeamByTeamId(team.getTeamId())).thenReturn(team);
+    when(artifactRepository.findArtifactByArtifactId(artifact.getArtifactId())).thenReturn(
+        artifact);
+    when(tagRepository.findTagByTagId(tag1.getTagId())).thenReturn(tag1);
+    when(tagRepository.findTagByTagId(tag2.getTagId())).thenReturn(tag2);
 
     String mockAlphaResponse = "{\"alpha\": 0.85}";
     when(pythonClientService.getKrippendorffAlpha(Mockito.anyList())).thenReturn(mockAlphaResponse);
 
     //Act
-    ResponseEntity<?> response = teamService.getTeamIrr("teamId");
+    ResponseEntity<?> response = teamService.getTeamIrr(team.getTeamId());
 
     //Assert
     assertNotNull(response);
     assertEquals(HttpStatus.OK, response.getStatusCode());
-    Map<String, Object> responseBody = (Map<String, Object>) response.getBody();
-    assertNotNull(responseBody);
-    assertEquals("Successfully retrieved Krippendorff's alpha", responseBody.get("msg"));
-    assertEquals(0.85, responseBody.get("irr"));
+    assertNotNull(response.getBody());
+    Map<String, Object> responseBody = new HashMap<>();
+    responseBody.put("msg", "Successfully retrieved Krippendorff's alpha.");
+    responseBody.put("irr", 0.85);
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
@@ -1133,17 +1126,18 @@ public class TeamServiceTest {
   @Test
   void testGetTeamIrr_TeamNotFound() {
     //Arrange
-    when(teamRepository.findTeamByTeamId("teamId")).thenReturn(null);
+    when(teamRepository.findTeamByTeamId(team.getTeamId())).thenReturn(null);
 
     //Act
-    ResponseEntity<?> response = teamService.getTeamIrr("teamId");
+    ResponseEntity<?> response = teamService.getTeamIrr(team.getTeamId());
 
     //Assert
     assertNotNull(response);
     assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
-    Map<String, Object> responseBody = (Map<String, Object>) response.getBody();
-    assertNotNull(responseBody);
-    assertEquals("Team not found", responseBody.get("msg"));
+    assertNotNull(response.getBody());
+    Map<String, Object> responseBody = new HashMap<>();
+    responseBody.put("msg", "Team not found.");
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
@@ -1152,18 +1146,19 @@ public class TeamServiceTest {
   @Test
   void testGetTeamIrr_ArtifactNotFound() {
     //Arrange
-    when(teamRepository.findTeamByTeamId("teamId")).thenReturn(team);
-    when(artifactRepository.findArtifactByArtifactId("artifactId")).thenReturn(null);
+    when(teamRepository.findTeamByTeamId(team.getTeamId())).thenReturn(team);
+    when(artifactRepository.findArtifactByArtifactId(artifact.getArtifactId())).thenReturn(null);
 
     //Act
-    ResponseEntity<?> response = teamService.getTeamIrr("teamId");
+    ResponseEntity<?> response = teamService.getTeamIrr(team.getTeamId());
 
     //Assert
     assertNotNull(response);
     assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
-    Map<String, Object> responseBody = (Map<String, Object>) response.getBody();
+    Map<String, Object> responseBody = new HashMap<>();
+    responseBody.put("msg", "Artifact not found.");
     assertNotNull(responseBody);
-    assertEquals("Artifact not found", responseBody.get("msg"));
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
@@ -1173,22 +1168,24 @@ public class TeamServiceTest {
   void testGetTeamIrr_NoTagsForArtifact() {
     //Arrange
     artifact.setTags(new ArrayList<>()); // Artifact has no tags
-    when(teamRepository.findTeamByTeamId("teamId")).thenReturn(team);
-    when(artifactRepository.findArtifactByArtifactId("artifactId")).thenReturn(artifact);
+    when(teamRepository.findTeamByTeamId(team.getTeamId())).thenReturn(team);
+    when(artifactRepository.findArtifactByArtifactId(artifact.getArtifactId())).thenReturn(
+        artifact);
 
     String mockAlphaResponse = "{\"alpha\": 1.0}";
     when(pythonClientService.getKrippendorffAlpha(Mockito.anyList())).thenReturn(mockAlphaResponse);
 
     //Act
-    ResponseEntity<?> response = teamService.getTeamIrr("teamId");
+    ResponseEntity<?> response = teamService.getTeamIrr(team.getTeamId());
 
     //Assert
     assertNotNull(response);
     assertEquals(HttpStatus.OK, response.getStatusCode());
-    Map<String, Object> responseBody = (Map<String, Object>) response.getBody();
-    assertNotNull(responseBody);
-    assertEquals("Successfully retrieved Krippendorff's alpha", responseBody.get("msg"));
-    assertEquals(1.0, responseBody.get("irr")); // Default alpha value
+    assertNotNull(response.getBody());
+    Map<String, Object> responseBody = new HashMap<>();
+    responseBody.put("msg", "Successfully retrieved Krippendorff's alpha.");
+    responseBody.put("irr", 1.0); //Default alpha value
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
@@ -1197,55 +1194,105 @@ public class TeamServiceTest {
   @Test
   void testGetTeamIrr_TagCreatedByUserMismatch() {
     //Arrange
-    when(teamRepository.findTeamByTeamId("teamId")).thenReturn(team);
-    when(artifactRepository.findArtifactByArtifactId("artifactId")).thenReturn(artifact);
+    when(teamRepository.findTeamByTeamId(team.getTeamId())).thenReturn(team);
+    when(artifactRepository.findArtifactByArtifactId(artifact.getArtifactId())).thenReturn(
+        artifact);
 
     tag1.setCreatedBy("otherUserId"); // No user in the team matches this creator
-    when(tagRepository.findTagByTagId("tagId1")).thenReturn(tag1);
-    when(tagRepository.findTagByTagId("tagId2")).thenReturn(tag2);
+    when(tagRepository.findTagByTagId(tag1.getTagId())).thenReturn(tag1);
+    when(tagRepository.findTagByTagId(tag2.getTagId())).thenReturn(tag2);
 
     String mockAlphaResponse = "{\"alpha\": 0.0}";
     when(pythonClientService.getKrippendorffAlpha(Mockito.anyList())).thenReturn(mockAlphaResponse);
 
     //Act
-    ResponseEntity<?> response = teamService.getTeamIrr("teamId");
+    ResponseEntity<?> response = teamService.getTeamIrr(team.getTeamId());
 
     //Assert
     assertNotNull(response);
     assertEquals(HttpStatus.OK, response.getStatusCode());
-    Map<String, Object> responseBody = (Map<String, Object>) response.getBody();
-    assertNotNull(responseBody);
-    assertEquals("Successfully retrieved Krippendorff's alpha", responseBody.get("msg"));
-    assertEquals(0.0, responseBody.get("irr")); // Alpha drops due to mismatch
+    assertNotNull(response.getBody());
+    Map<String, Object> responseBody = new HashMap<>();
+    responseBody.put("msg", "Successfully retrieved Krippendorff's alpha.");
+    responseBody.put("irr", 0.0); //Alpha drops due to mismatch
+    assertEquals(responseBody, response.getBody());
   }
 
   /**
    * Test a successful execution of UpdateTeamUsers method
    */
-  //@Test
-  //void testUpdateTeamUsers_Success() {
-    // Arrange
-    //when(teamRepository.findTeamByTeamId("teamId")).thenReturn(team);
-    //when(userRepository.findByEmail("user1@example.com")).thenReturn(user1);
-    //when(userRepository.findByEmail("user3@example.com")).thenReturn(user3);
-    //when(userRepository.findByUserId("user1Id")).thenReturn(user1);
-    //when(userRepository.findByUserId("user3Id")).thenReturn(user3);
-    //when(userRepository.save(user3)).thenReturn(user3);
+  @Test
+  void testUpdateTeamUsers_Success() {
+    //Arrange
+    when(teamRepository.findTeamByTeamId(team.getTeamId())).thenReturn(team);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByUserId(owner.getUserId())).thenReturn(owner);
+    when(userRepository.findByEmail(user1.getEmail())).thenReturn(user1);
+    when(userRepository.findByEmail(user3.getEmail())).thenReturn(user3);
+    when(userRepository.findByUserId(user1.getUserId())).thenReturn(user1);
+    when(userRepository.findByUserId(user2.getUserId())).thenReturn(user2);
+    when(userRepository.findByUserId(user3.getUserId())).thenReturn(user3);
+    when(userRepository.save(user3)).thenReturn(user3);
 
-    //List<String> userEmails = Arrays.asList("user1@example.com", "user3@example.com");
+    List<String> userEmails = Arrays.asList(user1.getEmail(), user3.getEmail());
 
-    // Act
-    //ResponseEntity<?> response = teamService.updateTeamUsers("teamId", userEmails);
+    //Act
+    ResponseEntity<?> response = teamService.updateTeamUsers(team.getTeamId(), userEmails);
 
-    // Assert
-    //assertNotNull(response);
-    //assertEquals(HttpStatus.OK, response.getStatusCode());
-    //assertEquals("Team users updated successfully",
-    //    ((Map<String, String>) response.getBody()).get("msg"));
-    //verify(teamRepository).save(team);
-    //assertEquals(Arrays.asList("user1Id", "user3Id"), team.getUserIds());
-    //assertTrue(user3.getTeamIds().contains("teamId"));
-  //}
+    System.out.println(response.getBody());
+
+    //Assert
+    assertNotNull(response);
+    assertEquals(HttpStatus.OK, response.getStatusCode());
+    Map<String, Object> responseBody = new HashMap<>();
+    responseBody.put("msg", "Team users updated successfully.");
+    assertEquals(responseBody, response.getBody());
+    verify(teamRepository).save(team);
+    assertEquals(Arrays.asList(user1.getUserId(), user3.getUserId()), team.getUserIds());
+    assertTrue(user3.getTeamIds().contains("teamId")); //This doesn't work apparently...
+    assertFalse(user2.getTeamIds().contains("teamId"));
+  }
+
+  /**
+   * Tests an execution of testUpdateUsers where the team is null
+   */
+  @Test
+  void testUpdateTeamUsers_TeamNull() {
+    //Arrange
+    when(teamRepository.findTeamByTeamId(team.getTeamId())).thenReturn(null);
+    List<String> userEmails = Arrays.asList(user1.getEmail(), user3.getEmail());
+
+    //Act
+    ResponseEntity<?> response = teamService.updateTeamUsers(team.getTeamId(), userEmails);
+
+    //Assert
+    assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
+    Map<String, Object> responseBody = new HashMap<>();
+    responseBody.put("msg", "Team not found.");
+    assertEquals(responseBody, response.getBody());
+  }
+
+  /**
+   * Tests an execution for updateTeamUses where the user is not found
+   */
+  @Test
+  void testUpdateTeamUsers_UserNotFound() {
+    //Arrange
+    when(teamRepository.findTeamByTeamId(team.getTeamId())).thenReturn(team);
+    when(projectRepository.findProjectByProjectId(project.getProjectId())).thenReturn(project);
+    when(userRepository.findByEmail(user1.getEmail())).thenReturn(null);
+    List<String> userEmails = Arrays.asList(user1.getEmail(), user3.getEmail());
+
+    //Act
+    ResponseEntity<?> response = teamService.updateTeamUsers(team.getTeamId(), userEmails);
+
+    //
+    assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
+    Map<String, Object> responseBody = new HashMap<>();
+    responseBody.put("msg", "User with email " + user1.getEmail() + " not found.");
+    assertEquals(responseBody, response.getBody());
+
+  }
 
 
 }
